--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
         <div id="stockInfo" class="card" style="display: none;">
             <h2 id="stockSymbol"></h2>
             <p>Current Price: $<span id="currentPrice"></span></p>
+            <div id="chartContainer"></div>
         </div>
         
         <div id="predictionSection" class="card" style="display: none;">
@@ -30,14 +31,6 @@
             <div id="predictionResults"></div>
         </div>
         
-        <!-- need to add chart display here later -->
-        <!-- want to add watchlist feature later -->
-        <!--
-        <div class="card">
-            <h2>Watchlist</h2>
-            <p>Feature coming soon...</p>
-        </div>
-        -->
         
     </div>
     
